# 240710-KD-tree

./: .clang-tidy  .gitignore  CMakeSettings.json  dev-tools.cmake  makefile
demo/: CMakeLists.txt  DemoScene.cpp  DemoScene.hpp  ImGui.cpp  ImGui.hpp  main.cpp
src/: CMakeLists.txt  CS350Loader.cpp  CS350Loader.hpp  Camera.cpp  Camera.hpp  DebugRenderer.cpp  DebugRenderer.hpp  GJK.cpp  GJK.hpp  Geometry.cpp  Geometry.hpp  KdTree.cpp  KdTree.hpp  Logging.cpp  Logging.hpp  Math.hpp  PRNG.cpp  Primitive.cpp  Primitive.hpp  Shader.cpp  Shader.hpp  ShapeUtils.cpp  ShapeUtils.hpp  Shapes.cpp  Shapes.hpp  Stats.cpp  Stats.hpp  Utils.cpp  Utils.hpp  Window.cpp  Window.hpp
test/: A-Common.cpp  A5-KdTree.cpp  CMakeLists.txt  Common.cpp  Common.hpp
